<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/commonBg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/commonBg">

        <FrameLayout
            android:id="@+id/flImages"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/common_padding"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:layout_constraintDimensionRatio="H,7:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_launcher_background" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/llContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding"
            android:orientation="vertical"
            android:padding="@dimen/common_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flImages">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_desc_one"
                android:textColor="@color/commonText"
                android:textSize="@dimen/common_desc"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_small"
                android:text="@string/text_desc_one_sub"
                android:textColor="@color/commonText"
                android:textSize="@dimen/common_desc_sub" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding"
                android:text="@string/text_desc_two"
                android:textColor="@color/commonText"
                android:textSize="@dimen/common_desc"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_small"
                android:text="@string/text_desc_two_sub"
                android:textColor="@color/commonText"
                android:textSize="@dimen/common_desc_sub" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/common_padding"
                app:srcCompat="@drawable/group_13" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding"
                android:text="@string/text_desc_three"
                android:textColor="@color/commonText"
                android:textSize="@dimen/common_desc"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_small"
                android:text="@string/text_desc_three_sub"
                android:textColor="@color/commonText"
                android:textSize="@dimen/common_desc_sub" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivGif"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/common_padding"
            android:layout_marginTop="@dimen/common_padding_small"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llContent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>